# MCP_financial_cents

./: .env.example  .gitignore  FinancialCents.md  MCP.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt  test_sharepoint_connection.py
.github/workflows/: claude.yml
financial_cents/: __init__.py  client_resources.py  client_tasks.py  clients.py  config.py  http_client.py  invoices.py  project_resources.py  projects.py  time_activities.py
mcp_fc/: __init__.py  __main__.py  pdf_tools.py  server.py
scripts/: run_mcp.ps1  run_mcp.sh
sharepoint/: __init__.py  base.py  sharepoint_provider.py
tests/: test_client_resources.py  test_client_tasks.py  test_clients.py  test_create_client.py  test_invoices.py  test_mcp_fc.py  test_mcp_sharepoint.py  test_pdf_tools.py  test_project_resources.py  test_projects.py  test_time_activities.py
